--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: 09df0d4726a155faf21483337b1b5baf2ff987db
+  github_token: $GITHUB_TOKEN
   local_dir: dist/bitcoin
   edge: true
   on: 
